// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleCollection should return the appropriate transformer and model for a collection 1`] = `
Object {
  "model": Object {},
  "modelName": "publications",
  "transformer": [Function],
}
`;

exports[`handleCollection should return the appropriate transformer and model for a collection 2`] = `
Object {
  "model": Object {},
  "modelName": "publications",
  "transformer": [Function],
}
`;

exports[`handleCollection should return the appropriate transformer and model for a collection 3`] = `
Object {
  "model": Object {},
  "modelName": "films",
  "transformer": [Function],
}
`;
